cleanup app controler and added compute personality endpoint
