# service/src/questions/dto/compute-personality.dto.ts
@@ -1,0 +1,7 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { Answer } from '../entities/answer.entity';
+
+export class ComputePersonalityDto {
+  @ApiProperty({ type: [Answer] })
+  answers: Answer[];
+}
