# service/src/questions/questions.controller.ts
@@ -1,8 +1,10 @@
 import { Controller, Get, Post, Body, Delete } from '@nestjs/common';
 import { QuestionsService } from './questions.service';
 import { CreateQuestionDto } from './dto/create-question.dto';
-import { ApiResponse, ApiTags } from '@nestjs/swagger';
+import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
 import { Question } from './entities/question.entity';
+import { ComputePersonalityDto } from './dto/compute-personality.dto';
+import { Personality } from './entities/personality-result.entity';
 
 @Controller('questions')
 @ApiTags('questions')
@@ -10,6 +12,7 @@ export class QuestionsController {
   constructor(private readonly questionsService: QuestionsService) {}
 
   @Post()
+  @ApiOperation({ operationId: 'createQuestion' })
   @ApiResponse({
     status: 201,
     type: Question,
@@ -20,6 +23,7 @@ export class QuestionsController {
   }
 
   @Get()
+  @ApiOperation({ operationId: 'getAllQuestions' })
   @ApiResponse({
     status: 200,
     type: [Question],
@@ -27,6 +31,19 @@ export class QuestionsController {
   })
   findAll() {
     return this.questionsService.findAll();
+  }
+
+  @Post('compute-personality')
+  @ApiOperation({ operationId: 'computePersonality' })
+  @ApiResponse({
+    status: 200,
+    type: Personality,
+    description: 'Returns Result of the Quiz',
+  })
+  async computePersonality(
+    @Body() computePersonalityDto: ComputePersonalityDto,
+  ) {
+    return this.questionsService.computePersonality(computePersonalityDto);
   }
 
   @Delete()
